# ossabliterate

GPT-OSSC/: 2511.06798v1.txt  ABLITERATION_LESSONS.md  ABLITERATION_TODO.md  FH_RL_DATA_TODO.md  FH_RL_GPT2_TODO.md  FH_RL_MOONSHOT_TODO.md  FH_RL_NEXT_TODO.md  FH_RL_PLAN_TODO.md  FH_RL_TODO.md  INTROSPECTION_ACTIONS.md  INTROSPECTION_ROADMAP.md  README.md  TODO_INTROSPECTION.md  TODO_INTROSPECTION_RUN.txt  TODO_NEXT_ACTIONS.md  check_config.py  compare_samples.py  debug_config.yaml  error4.txt  error_resolver_plan.txt  hug_chat_template.jinja  pyproject.toml  run_eval_with_timeout.ps1  run_test.py  sample_ckpt.py  sample_latest.py  sweep.py  test_retro.py  test_run.py  test_script.py  tmp_prompt.txt  tmp_prompt_chattemp.txt  tmp_prompt_harmful.txt
GPT-OSSC/cli/: __init__.py  main.py
GPT-OSSC/configs/: abliteration_example.yaml  abliteration_gpt_oss.yaml  abliteration_gpt_oss_chattemp.yaml  abliteration_gpt_oss_chattemp_adaptive.yaml  abliteration_gpt_oss_chattemp_adaptive_v2.yaml  abliteration_gpt_oss_chattemp_assiststart_tiered.yaml  abliteration_gpt_oss_chattemp_assiststart_tiered_5x.yaml  abliteration_gpt_oss_chattemp_assiststart_tiered_x2.yaml  abliteration_gpt_oss_chattemp_router.yaml  abliteration_gpt_oss_chattemp_router_exps_base0p5_sp0p8.yaml  abliteration_gpt_oss_chattemp_router_exps_base1.yaml  abliteration_gpt_oss_chattemp_router_exps_base2p5.yaml  abliteration_gpt_oss_chattemp_router_exps_low.yaml  abliteration_gpt_oss_chattemp_router_exps_moderate.yaml  abliteration_gpt_oss_chattemp_router_exps_strong.yaml  abliteration_gpt_oss_chattemp_router_strong.yaml  abliteration_gpt_oss_dequant.yaml  abliteration_gpt_oss_dequant_low.yaml  abliteration_gpt_oss_dequant_projoff.yaml  abliteration_gpt_oss_v2.yaml  cpu_small.yaml  cpu_small_trained.yaml  (+15 more)
(+145 files in other folders)
